<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_FEFBFF"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/urbanist_semibold"
                android:singleLine="true"
                android:text="@string/quit_without_save"
                android:textColor="@color/color_001A43"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/urbanist_medium"
                android:maxLines="2"
                android:text="@string/all_your_un_saved_changes_can_not_be_recovered_do_you_want_to_quit"
                android:textColor="@color/color_757780"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_E1E2EC"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/btnQuit"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/urbanist_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="9dp"
                    android:singleLine="true"
                    android:text="@string/quit"
                    android:textColor="@color/color_757780"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/urbanist_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="9dp"
                    android:singleLine="true"
                    android:text="@string/cancel"
                    android:textColor="@color/color_757780"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnSave"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_border_btn_1a63e5"
                    android:ellipsize="end"
                    android:fontFamily="@font/urbanist_semibold"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="9dp"
                    android:singleLine="true"
                    android:text="@string/save"
                    android:textColor="@color/color_FEFBFF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>