<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/delete_"
                android:textColor="@color/color_001A43"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_delete"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/urbanist_medium"
                android:singleLine="true"
                android:text="@string/are_you_sure_to_delete_this_grid"
                android:textColor="@color/color_45464F"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_content"
                android:layout_marginTop="24dp"
                android:background="@color/color_E1E2EC">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_toStartOf="@+id/btn_delete"
                    app:cardBackgroundColor="@color/color_E1E2EC"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/urbanist_semibold"
                            android:text="@string/cancel"
                            android:textColor="@color/color_757780"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginVertical="16dp"
                    android:layout_marginEnd="24dp"
                    app:cardBackgroundColor="@color/color_BA1A1A"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/urbanist_semibold"
                            android:text="@string/delete"
                            android:textColor="@color/color_FEFBFF"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>